<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ProgressBar
        android:id= "@+id/progressBar"
        style= "?android:attr/progressBarStyleHorizontal"
        android:layout_width= "200dp"
        android:layout_height= "200dp"
        android:layout_centerInParent= "true"
        android:background= "@drawable/circular_shape"
        android:indeterminate= "false"
        android:max= "100"
        android:visibility="invisible"
        android:progress= "65"
        android:progressDrawable= "@drawable/circular_progress_bar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="Here’s\nyour first\nstep with \nus! "/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/black_overlay"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:autofillHints="John Doe"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColorHighlight="#D59090"
                            android:visibility="visible"
                            tools:visibility="visible" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/login_email_hint"
                            android:autofillHints="Johndoe@hotmail.com" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="@string/mobile_number"
                            android:autofillHints="9874661230" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:autofillHints="********" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="#FFF"
                        android:text="@string/register"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_padding="6dp"/>

                    <TextView
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:text="@string/already_have_an_account"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

               <!-- <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/use_other_methods"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>-->

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

            </LinearLayout>
<!--

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google_plus"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
-->


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:adjustViewBounds="false"/>
</RelativeLayout>
</ScrollView>